Add MessageScreen and related design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="task_not_found">Task not found</string>
     <string name="task_details">Task details</string>
     <string name="menu_back">Menu back</string>
+    <string name="message_title">Message</string>
 </resources>
