Modified message screen design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="task_details">Task details</string>
     <string name="menu_back">Menu back</string>
     <string name="message_title">Message</string>
+    <string name="ask_your_question_here">Ask your question here</string>
 </resources>
