Integrated gemini-pro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="menu_back">Menu back</string>
     <string name="message_title">Message</string>
     <string name="ask_your_question_here">Ask your question here</string>
+    <string name="loading_message_error">Error while loading message history</string>
+
 </resources>
